2007-10-26  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c, config.c: Set GPContext consistently
	  in the Params struct, otherwise we might resuse
	  already free contexts.

2007-10-25  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp-bugs.h: The newer Nikons have the regular
	  capture events just fine, just the old ones suck a bit here.
	  Mark them broken for now.

2007-09-18  Linus Walleij  <triad@df.lth.se>

	* usb.c, library.c, ptp.c, ptp.h:
	  Split out cancel handling to shared code.

2007-09-13  Marcus Meissner  <marcus@jet.franken.de>

	* usb.c, library.c: Added cancellation support for read transfers.

2007-09-11  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-pack.c, ptp.h, ptp.c, library.c:
	  Change MTP proplist to a proparray.
	  Rename MTPPropList to MTPProperties to match the 
	  Use qsort() instead of a O(n^2) insertion sort.
	  state.

2007-08-28  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-pack.c: Pack NULL strings same as "" (from libmtp).

2007-08-22  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Nikon Coolpix S200 (from Marius Groeger) 
	* library.c: Added Nikon Coolpix L12, Cowon iAudio U3

2007-08-03  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h, ptp-pack.c: From libmtp:
	  Pack/unpack 64bit integers.
	  Fixed packing of arrays.

2007-07-26  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Merged MTP devices from libmtp.

2007-07-18  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h: Added PTP reset handling (from libmtp).

	* ptp-pack.c, config.c: Handle EOS CameraTime (just a UNIX timestamp again)

2007-07-17  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot S5 IS.

2007-07-03  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, config.c: Set EOS properties.

	* library.c: Added Kodak C613 id.

	* ptp.c,ptp.h: Added freeing of objectinfos.

2007-06-29  Marcus Meissner  <marcus@jet.franken.de>
