@@ -1,3 +1,9 @@
+2007-10-27  Marcus Meissner  <marcus@jet.franken.de>
+
+	* music-players.h, library.c, Makefile-files:
+	  Split off music-players.h from libmtp to share
+	  between us and libmtp.
+
 2007-10-26  Marcus Meissner  <marcus@jet.franken.de>
 	
 	* library.c, config.c: Set GPContext consistently
